src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B003_B003.py.snap
---
source: src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    AssignmentToOsEnviron: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 10
  fix: ~
  parent: ~

