src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B004_B004.py.snap
---
source: src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    UnreliableCallableCheck: ~
  location:
    row: 3
    column: 7
  end_location:
    row: 3
    column: 29
  fix: ~
  parent: ~
- kind:
    UnreliableCallableCheck: ~
  location:
    row: 5
    column: 7
  end_location:
    row: 5
    column: 36
  fix: ~
  parent: ~

