src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B007_B007.py.snap
---
source: src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    UnusedLoopControlVariable:
      name: i
      certainty: Certain
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 5
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: k
      certainty: Certain
  location:
    row: 18
    column: 12
  end_location:
    row: 18
    column: 13
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: i
      certainty: Certain
  location:
    row: 30
    column: 4
  end_location:
    row: 30
    column: 5
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: k
      certainty: Certain
  location:
    row: 30
    column: 12
  end_location:
    row: 30
    column: 13
  fix:
    content:
      - _k
    location:
      row: 30
      column: 12
    end_location:
      row: 30
      column: 13
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Uncertain
  location:
    row: 34
    column: 9
  end_location:
    row: 34
    column: 12
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Uncertain
  location:
    row: 38
    column: 9
  end_location:
    row: 38
    column: 12
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Uncertain
  location:
    row: 42
    column: 9
  end_location:
    row: 42
    column: 12
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Uncertain
  location:
    row: 46
    column: 9
  end_location:
    row: 46
    column: 12
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Certain
  location:
    row: 52
    column: 13
  end_location:
    row: 52
    column: 16
  fix:
    content:
      - _bar
    location:
      row: 52
      column: 13
    end_location:
      row: 52
      column: 16
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Certain
  location:
    row: 59
    column: 13
  end_location:
    row: 59
    column: 16
  fix: ~
  parent: ~
- kind:
    UnusedLoopControlVariable:
      name: bar
      certainty: Certain
  location:
    row: 68
    column: 13
  end_location:
    row: 68
    column: 16
  fix: ~
  parent: ~

