src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B013_B013.py.snap
---
source: src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    RedundantTupleInExceptionHandler: ValueError
  location:
    row: 3
    column: 7
  end_location:
    row: 3
    column: 20
  fix:
    content: ValueError
    location:
      row: 3
      column: 7
    end_location:
      row: 3
      column: 20
  parent: ~

