src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B014_B014.py.snap
---
source: src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    DuplicateHandlerException:
      - OSError
  location:
    row: 17
    column: 7
  end_location:
    row: 17
    column: 25
  fix:
    content: OSError
    location:
      row: 17
      column: 7
    end_location:
      row: 17
      column: 25
  parent: ~
- kind:
    DuplicateHandlerException:
      - MyError
  location:
    row: 28
    column: 7
  end_location:
    row: 28
    column: 25
  fix:
    content: MyError
    location:
      row: 28
      column: 7
    end_location:
      row: 28
      column: 25
  parent: ~
- kind:
    DuplicateHandlerException:
      - re.error
  location:
    row: 49
    column: 7
  end_location:
    row: 49
    column: 27
  fix:
    content: re.error
    location:
      row: 49
      column: 7
    end_location:
      row: 49
      column: 27
  parent: ~

